# AEGIS

./: .gitignore  Johnk-HandoverNotes.md  README.md  pyproject.toml
demos/: gpt2-sentiment.ipynb  rl.ipynb  soft_prompt.ipynb
notebooks/: environment.ipynb
scripts/: cyborg_env.py  install.sh
src/aegis/: __init__.py  evaluate.py  llm_agent.py  ppo.py  prompt.py  random_agent.py
