[tool.poetry]
name = "aegis"
version = "0.1.0"
description = "Autonomous Embedded-Graph Intrusion Sentinel"
authors = ["johnno1011 <jonathan@intellium.ai>", "jacksmithy1 <jack.smith@intellium.ai>", "nifets.ai <stefan@intellium.ai>"]
readme = "README.md"
packages = [{include = "aegis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
cyborg = {path = "../CybORG"}
openai = "^1.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
