[tool.poetry]
name = "aegis"
version = "0.1.0"
description = "Autonomous Embedded-Graph Intrusion Sentinel"
authors = ["johnno1011 <jonathan@intellium.ai>", "jacksmithy1 <jack.smith@intellium.ai>", "nifets.ai <stefan@intellium.ai>"]
readme = "README.md"
packages = [{include = "aegis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.3.1+cu121", source = "pytorch-gpu-src"}
transformers = "^4.41.2"
torch-geometric = "^2.5.3"
peft = "^0.11.1"
datasets = "^2.20.0"
nvitop = "^1.3.2"
trl = "^0.9.4"
evaluate = "^0.4.2"
numpy = "^1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
